modified index.html, created index.css

--- a/Index.html
+++ b/Index.html
@@ -2,26 +2,35 @@
 <html>
 <head>
 	<title>User Authentication</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<section>
-		<div>
-			<h3>Sign Up</h3>
-			<p>Please fill in this form to create an account!</p>
-			<hr>
-			<input type="text" placeholder="First Name" >
-			<input type="text" placeholder="Last Name"><br>
-			<input type="mail" placeholder="Email"><br>
-			<input type="password" placeholder="Password"><br>
-			<p>Password should be 8 characters long</p>
-			<input type="password" placeholder="Confirm Password"><br>		
-			<p>Password doesn't match</p>
-			<input type="checkbox" >
-			<span> I accept the <a href="#">Terms of Use</a>  & <a href="#">Privacy Policy</a> <br>
+		<div class="sign-up-form">
+			<div class="text-container">
+				<h3 class="sign-up-text">Sign Up</h3>
+				<p class="sign-up-sub">Please fill in this form to create an account!</p>
+			</div>
+			<div class="input-boxes">
+				<input type="text" placeholder="First Name" class="first-name">
+				<input type="text" placeholder="Last Name" class="last-name">
+				<br>
+				<input type="mail" placeholder="Email" class="email">
+				<br>
+				<input type="password" placeholder="Password" class="password">
+				<br>
+				<p class="password-error">Password should be 8 characters long
+				</p>
+				<input type="password" placeholder="Confirm Password" class="conf-password">
+				<br>		
+				<p class="conf-password-error">Password doesn't match</p>
+				<input type="checkbox" class="checkbox" >
+				<span class="t-n-c"> I accept the <a href="#">Terms of Use</a>  & <a href="#">Privacy Policy</a> <br>
 
-			<button>Sign Up</button>
+				<button class="sign-up-btn">Sign Up</button>
+			</div>
 		</div>
-		<div>
+		<div class="login-prompt">
 			Already have an account? <a href="#">Login here</a>
 		</div>
 	</section>
