made modifications to index.html and index.css, created login.html

--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>User Authentication</title>
+	<title>Sign Up</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 		<div class="login-prompt">
-			Already have an account? <a href="#">Login here</a>
+			Already have an account? <a href="login.html">Login here</a>
 		</div>
 	</section>
 </body>
