--- a/login.html
+++ b/login.html
@@ -12,10 +12,15 @@
 				<p class="sign-up-sub login-sub">Please fill in this form to sign in!</p>
 			</div>
 			<div class="input-boxes">
-
-				<input type="mail" placeholder="Email" class="email">
+				<input type="mail" 
+					placeholder="Email" 
+					class="email"
+					required="true">
 				<br>
-				<input type="password" placeholder="Password" class="password">
+				<input type="password" 
+					placeholder="Password" 
+					class="password"
+					required="true">
 				<br>
 				<p class="password-error"></p>
 				<button class="sign-up-btn login-btn">Login</button>
