--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
 					placeholder="Confirm Password" 
 					class="conf-password" id="conf-password">
 				<br>		
-				<p class="conf-password-error">Password does not match</p>
+				<p class="conf-password-error" id="conf-password-error">Password does not match</p>
 				<input type="checkbox" class="checkbox" id="checkbox" >
 				<span class="t-n-c"> I accept the <a href="#">Terms of Use</a>  & <a href="#">Privacy Policy</a> <br>
 
@@ -56,8 +56,6 @@
 		</div>
 	</section>
 
-	<script src="script.js">
-
-	</script>
+	<script src="script.js"></script>
 </body>
 </html>
